# WIMPY

./: .gitignore  LICENSE.md  README.md  bc_identification_nanopore.ipynb  environment.yml  example_script_python.ipynb  test.ipynb  wimpy.py
Wimpy Essential/: chophat.m  fastqall.m
Wimpy Helper Functions/: alignup.m  bc_detect.m  bowtile.m  callbarcode.m  identitie.m  viscount.m
example_ref_sequences/: 100k-Promoters.xlsx  100k_Binding-Sites.xlsx  100k_ORF-Parts_SynTF.xlsx  100k_Terminator_spacers.xlsx  100k_Terminators.xlsx  Blosum62_BC2.xlsx  ref_sequences.fasta
fastq/: README.md
info/: 100k_Minimal-Promoters.xlsx  100k_Terminators.xlsx  Blosum62_BC1.xlsx  ref_sequences.fasta
minimap2_benchmark_test/: .RData  .Rhistory  GroundTruth_prom_assignments.csv  Minimap_bs_assignments.csv  Minimap_prom_assignments.csv  Wimpy_bs_assignments.csv  alignment_numBS.csv  alignment_prom.csv  aln.sam  aln_prom.sam  bindingsites.fa  minimap_benchmark.asv  minimap_benchmark.m  prom2ref.fa
wimpy_matlab/: Example_live_script_matlab.mlx  example_live_script_matlab.md  example_script_matlab.asv  example_script_matlab.m
wimpy_matlab/wimpy_helper_functions/: FASTar.m  barcoat.asv  barcoat.m  bowtile.m  chophat.m  fastar.m  fastqall.m  tilepin.m  viscount.m
wimpy_python/: environment.yml  example_script_python.ipynb  pyproject.toml
wimpy_python/.ipynb_checkpoints/: example_script_python-checkpoint.ipynb
wimpy_python/wimpy/: wimpy.py
