[build-system]
requires = ["setuptools"]

[project]
name = "wimpy"
authors = [
    { name = "Yiduo Wang", email = "yiduo@rice.edu" },
    { name = "Kshitij Rai", email = "kr35@rice.edu" },
]
description = "A software package for nanopore sequencing analysis of combinatorial genetic libraries of arbitrary length scales"
version = "1.0"
requires-python = ">=3.9"
dependencies = [
    "biopython",
    "ipykernel",
    "numpy",
    "matplotlib",
    "pandas",
    "openpyxl",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["wimpy"]
